adds payment card

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+            card-title="Payments"
+            card-subtitle="Pay for Troop dues and events"
+            card-href="payments.html"
+            button-text="Payments Hub"
+            background-image="/src/carousel-images/scout shadow on top of mountain with sunset.jpg"
+        %}
+        {% include main-carousel-card.html
             card-title="Summit Summer Camp"
             card-subtitle="June 23-29"
             card-href="summit-sc-sign-up.html"
