--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
-            card-title="Woodruff Summer Camp"
-            card-subtitle="June 9-15"
-            card-href="woodruff-sc-sign-up.html"
+            card-title="Annual Family Banquet"
+            card-subtitle="Wednesday, August 21<br>6:00 - 8:30"
+            card-href="banquet-sign-up.html"
             button-text="Sign up"
-            background-image="/src/carousel-images/wsr-sign-far.jpg"
+            background-image="/src/carousel-images/img_dinner_2x.jpg"
         %}
         {% include main-carousel-card.html
-            card-title="Summit Summer Camp"
-            card-subtitle="June 23-29"
-            card-href="summit-sc-sign-up.html"
-            button-text="Sign up"
-            background-image="/src/carousel-images/summit-sign.webp"
+            card-title="Update Contact Info"
+            card-subtitle="Update information in TroopMaster to prepare for upcoming communication changes"
+            card-href="contact-info-directions.html"
+            button-text="Instructions"
+            background-image="/src/carousel-images/glorious-blue-mountain-range.jpg"
         %}
         {% include main-carousel-card.html
             card-title="High Adventure"
-            card-subtitle="2019"
+            card-subtitle="2020"
             card-href="camps-adventure.html"
             button-text="View list"
             background-image="/src/carousel-images/scout shadow on top of mountain with sunset.jpg"
