--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ title: Home
             background-image="/src/carousel-images/img_dinner_2x.jpg"
         %}
         {% include main-carousel-card.html
+            card-title="Merit Badge Clinic"
+            card-subtitle="Saturday, August 24"
+            card-href="merit-badge-clinic.html"
+            button-text="Info & sign up"
+            background-image="/src/carousel-images/merit-badges.jpg"
+        %}
+        {% include main-carousel-card.html
             card-title="Update Contact Info"
             card-subtitle="Update information in TroopMaster to prepare for upcoming communication changes"
             card-href="contact-info-directions.html"
