remove 'fall' from merit badge clinic (it is in summer)

--- a/merit-badge-clinic.html
+++ b/merit-badge-clinic.html
@@ -4,7 +4,7 @@ title: Merit Badge Clinic
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
-    <h1>Fall Merit Badge Clinic</h1>
+    <h1>Merit Badge Clinic</h1>
     <p>Saturday, August 24, 2019</p>
   </div>
 </div>
