update pine straw sales dates

--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -43,8 +43,8 @@ title: Campout Schedule &amp; Local Events
   <div class="flex-item">
     <h2>Pine Straw Sales</h2>
     <p>The Scout Troop’s principal fund raiser for summer camp and high adventure is selling and delivering Pine Straw to neighbors in the Buckhead, Brookhaven and Sandy Springs areas.
-      <br>&#8193;&#8193;Fall Pine Straw Sales Date - November 3, 2018
-      <br>&#8193;&#8193;Spring Pine Straw Sales Date - March 16 2019
+      <br>&#8193;&#8193;Fall Pine Straw Sales Date - November 2, 2019
+      <br>&#8193;&#8193;Spring Pine Straw Sales Date - March 14, 2020
     </p>
   </div>
 </div>
