--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -17,26 +17,22 @@ title: Campout Schedule &amp; Local Events
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
   <div class="flex-item">
-    <h3>2018-2019 Camping Schedule</h3>
-    <p>September 22-23: Ziplining at Blue Ridge Adventure Park</p>
-    <p>October 20-21: Backpacking at Siler Bald, North Carolina</p>
-    <p>November 10-11: S-Games Lanier Farm in Lanett, Alabama</p>
-    <p>December 1-2: December Campout at a Location to be Determined</p>
-    <p>December 26-January 7: Bridges: Uganda in Uganda, Africa</p>
+    <h3>2019-2020 Camping Schedule</h3>
+    <p>September 21-22: Climbing at Little River Canyon, Alabama</p>
+    <p>October 26-27: Backpacking at Standing Indian, North Carolina</p>
+    <p>November 16-17: Shooting Sports</p>
+    <p>December 7-8: Primitive Camping Skills at Naylor's Mountain Retreet, Georgia</p>
+    <p>December 26-January 6: Bridges: Uganda in Uganda, Africa</p>
     <p>December 27-31: Winter Camp at Bert Adams Scout Reservation</p>
-    <p>January 18-21: Santos Mountain Bike Trail and Rainbow River in Florida</p>
-    <p>January 18-21 Scuba Diving in Key Largo, Florida</p>
-    <p>February 9-10: Scout Weekend at St. James UMC</p>
-    <p>February 15-18: Okpik Winter Adventure in Ely, Minnesota</p>
-    <p>March 22-24: Scout Challenge at Bert Adams Scout Camp</p>
-    <p>April 13-14: Primitive Camping Skills at Standing Indian, NC</p>
-    <p>May 4-5: Whitewater Rafting at a Location to be Determined</p>
-    <p>June 9-15: Summer Camp at Woodruff Scout Reservation</p>
-    <p>June 23-29: Summer Camp #2 at the Summit Bechtel Reserve</p>
-    <p>June 24-30: Sea Base USVI in St. Thomas, US Virgin Islands</p>
-    <p>June 28-July 11: Philmont Scout Reservation in Cimarron, New Mexico</p>
-    <p>July 16-July 29: Philmont Scout Reservation in Cimarron, New Mexico</p>
-    <p>July 21-Aug. 2: World Jamboree at the Summit Bechtel Reserve</p>
+    <p>January 17-20: Sapelo Island, Georgia</p>
+    <p>February 8-9: Scout Weekend at St. James UMC</p>
+    <p>March 20-22: District Camporee at Bert Adams Scout Reservation</p>
+    <p>April 18-19: Mountain Biking &amp; Hiking at Cloudland Canyon State Park, Georgia</p>
+    <p>May 2-3: Hiking &amp; Backpacking</p>
+    <p>June 7-13: Summer Camp at Woodruff Scout Reservation</p>
+    <p>June 27-July 10: Philmont Scout Ranch in Cimarron, New Mexico</p>
+    <p>July 4-August 1: New River Trek at Summit Bechtel Reserve</p>
+    <p>July 23-August 2: Northern Tier in Atikokan, Ontario, Canada</p>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
