indent special dates with different method that keeps for all lines

--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -39,8 +39,8 @@ title: Campout Schedule &amp; Local Events
   <div class="flex-item">
     <h2>Pine Straw Sales</h2>
     <p>The Scout Troop’s principal fund raiser for summer camp and high adventure is selling and delivering Pine Straw to neighbors in the Buckhead, Brookhaven and Sandy Springs areas.
-      <br>&#8193;&#8193;Fall Pine Straw Sales Date - November 2, 2019
-      <br>&#8193;&#8193;Spring Pine Straw Sales Date - March 14, 2020
+      <span class="indent--new-line">Fall Pine Straw Sales Date - November 2, 2019</span>
+      <span class="indent--new-line">Spring Pine Straw Sales Date - March 14, 2020</span>
     </p>
   </div>
 </div>
@@ -48,8 +48,8 @@ title: Campout Schedule &amp; Local Events
   <div class="flex-item">
     <h2>Merit Badge Clinic</h2>
     <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign up at <a href="http://meritbadge.info">meritbadge.info</a>
-      <br>&#8193;&#8193;Summer Merit Badge Clinic - August 18, 2018
-      <br>&#8193;&#8193;Winter Merit Badge Clinic – February 8, 2019 (Part of Scout Weekend)
+      <span class="indent--new-line">Summer Merit Badge Clinic - August 18, 2018</span>
+      <span class="indent--new-line">Winter Merit Badge Clinic – February 8, 2019 (Part of Scout Weekend)</span>
     </p>
   </div>
 </div>
