add "Other Important Troop Dates" category from PDF calendar

--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -39,8 +39,8 @@ title: Campout Schedule &amp; Local Events
   <div class="flex-item">
     <h2>Pine Straw Sales</h2>
     <p>The Scout Troop’s principal fund raiser for summer camp and high adventure is selling and delivering Pine Straw to neighbors in the Buckhead, Brookhaven and Sandy Springs areas.
-      <span class="indent--new-line">Fall Pine Straw Sales Date - November 2, 2019</span>
-      <span class="indent--new-line">Spring Pine Straw Sales Date - March 14, 2020</span>
+      <span class="indent--new-line">Fall Pine Straw Sales Date – November 2, 2019</span>
+      <span class="indent--new-line">Spring Pine Straw Sales Date – March 14, 2020</span>
     </p>
   </div>
 </div>
@@ -48,8 +48,30 @@ title: Campout Schedule &amp; Local Events
   <div class="flex-item">
     <h2>Merit Badge Clinic</h2>
     <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign up at <a href="http://meritbadge.info">meritbadge.info</a>
-      <span class="indent--new-line">Summer Merit Badge Clinic - August 18, 2018</span>
+      <span class="indent--new-line">Summer Merit Badge Clinic – August 18, 2018</span>
       <span class="indent--new-line">Winter Merit Badge Clinic – February 8, 2019 (Part of Scout Weekend)</span>
+    </p>
+  </div>
+</div>
+<div class="content-strip content-strip--no-bottom-padding">
+  <div class="flex-item">
+    <h2>Planning Meetings</h2>
+    <p>Troop 370 has additional meeting times for members of the Patrol Leaders' Council and the Troop Committee.
+      <span class="indent--new-line">Patrol Leaders' Council – First Wednesday of each month at 6:30 PM</span>
+      <span class="indent--new-line">Troop Committee – Second Monday of each month at 6:30 PM</span>
+    </p>
+  </div>
+</div>
+<div class="content-strip content-strip--no-bottom-padding">
+  <div class="flex-item">
+    <h2>Additional Dates</h2>
+    <p>
+      <span class="indent--new-line">SOLO Wilderness First Aid – October 19-20, 2019</span>
+      <span class="indent--new-line">Hornaday Conservation Weekend – November 8-10, 2019</span>
+      <span class="indent--new-line">Phoenix District Webelos WOW – November 9, 2019</span>
+      <span class="indent--new-line">CPR Saturday – December 24, 2019 &amp; May 2, 2020</span>
+      <span class="indent--new-line">Parent's Night &amp; Camp Kick Off – January 29, 2020</span>
+      <span class="indent--new-line">Scout Sunday – February 9, 2020</span>
     </p>
   </div>
 </div>
