add carousel card for new campout and event schedule

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@ title: Home
             button-text="View list"
             background-image="/src/carousel-images/scout shadow on top of mountain with sunset.jpg"
         %}
+        {% include main-carousel-card.html
+            card-title="Campout & Event Schedule"
+            card-subtitle="2019-2020"
+            card-href="campout-schedule-local-events.html"
+            button-text="View schedule"
+            background-image="/src/carousel-images/nighttime-mountains.jpg"
+        %}
       </div>
     </div>
   </carousel>
