use bottom padding for last content strip

--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -62,7 +62,7 @@ title: Campout Schedule &amp; Local Events
     </p>
   </div>
 </div>
-<div class="content-strip content-strip--no-bottom-padding">
+<div class="content-strip">
   <div class="flex-item">
     <h2>Additional Dates</h2>
     <p>
