--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -21,7 +21,7 @@ title: Campout Schedule &amp; Local Events
     <p>September 21-22: Climbing at Little River Canyon, Alabama</p>
     <p>October 26-27: Backpacking at Standing Indian, North Carolina</p>
     <p>November 16-17: Shooting Sports</p>
-    <p>December 7-8: Primitive Camping Skills at Naylor's Mountain Retreet, Georgia</p>
+    <p>December 7-8: Primitive Camping Skills at Naylor's Mountain Retreat, Georgia</p>
     <p>December 26-January 6: Bridges: Uganda in Uganda, Africa</p>
     <p>December 27-31: Winter Camp at Bert Adams Scout Reservation</p>
     <p>January 17-20: Sapelo Island, Georgia</p>
