add new meetings page with time and dates for weekly, PLC, and committe meetings

--- a/events.html
+++ b/events.html
@@ -25,7 +25,7 @@ title: Events
     {% include event-card.html
         card-title="Meetings"
         card-subtitle="See the schedule for troop meetings, PLC meetings, and committee meetings."
-        card-href="/meetings.html"
+        card-href="/events/meetings.html"
         background-image="/src/carousel-images/troop370-scouts-jamboree-2017.jpg"
     %}
     {% include event-card.html
