add additional events page for events that do not fall under the other categories

--- a/events.html
+++ b/events.html
@@ -41,9 +41,9 @@ title: Events
         background-image="/src/carousel-images/pineneedles_l.jpg"
     %}
     {% include event-card.html
-        card-title="Additional Dates"
+        card-title="Additional Events"
         card-subtitle="Other events, activities, and trainings to know about."
-        card-href="/more-dates.html"
+        card-href="/events/additional-events.html"
         background-image="/src/carousel-images/forest-with-mountains.png"
     %}
   </div>
