move camps-adventure.html to events hub subdirectory

--- a/events.html
+++ b/events.html
@@ -17,9 +17,9 @@ title: Events
         background-image="/src/carousel-images/generic camping - tent with light.jpg"
     %}
     {% include event-card.html
-        card-title="High Adventure &amp; Camps"
-        card-subtitle="Philmont, Northern Tier, Sea Base, Summit, Jamboree, Summer Camp, Winter Camp."
-        card-href="/camps-adventure.html"
+        card-title="Camps &amp; High Adventure"
+        card-subtitle="Summer Camp, Winter Camp, Philmont, Northern Tier, Sea Base, Summit, Jamboree."
+        card-href="/events/camps-adventure.html"
         background-image="/src/carousel-images/bright-daytime-winter.jpg"
     %}
     {% include event-card.html
