add pine straw information

--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@ title: Events
     {% include event-card.html
         card-title="Pine Straw Sales"
         card-subtitle="Learn about timing, pricing, and payment for Troop 370's biannual fundraiser."
-        card-href="/pinestraw.html"
+        card-href="/events/pinestraw.html"
         background-image="/src/carousel-images/pineneedles_l.jpg"
     %}
     {% include event-card.html
