add merit badge clinics information

--- a/events.html
+++ b/events.html
@@ -31,7 +31,7 @@ title: Events
     {% include event-card.html
         card-title="Merit Badge Clinics"
         card-subtitle="Learn about Troop 370's Merit Badge Clinics."
-        card-href="/merit-badge-clinics.html"
+        card-href="/events/merit-badge-clinics.html"
         background-image="/src/carousel-images/merit-badges.jpg"
     %}
     {% include event-card.html
