replace old events dropdown in topnav and sidenav with new events page

--- a/campout-schedule-local-events.html
+++ b/campout-schedule-local-events.html
@@ -1,77 +1,12 @@
----
-layout: default
-title: Campout Schedule &amp; Local Events
----
-<link rel="stylesheet" href="./css/page/campout-schedule-local-events.css">
-<div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
-  <div class="flex-item">
-    <h1>Campout Schedule &amp; Local Events</h1>
-  </div>
-</div>
-<div class="content-strip content-strip--no-bottom-padding">
-  <div class="flex-item">
-    <h2>Monthy Campout Schedule</h2>
-    <p>Troop 370 schedules monthly campouts throughout the “camping year”, together with Winter Camp and Summer Camp. Find links to campout signup forms on the Troop's Google Calendar or Facebook page. On the calendar, click on the campout/event to see details about signing up; in order to view additional details and links about the campout, you can also click "more details" after the campout window opens within the calendar.</p>
-    <a href="/calendar.html" class="mdc-button">View Troop 370 Google Calendar</a>
-  </div>
-</div>
-<div class="content-strip content-strip--no-bottom-padding">
-  <div class="flex-item">
-    <h3>2019-2020 Camping Schedule</h3>
-    <p>September 21-22: Climbing at Little River Canyon, Alabama</p>
-    <p>October 26-27: Backpacking at Standing Indian, North Carolina</p>
-    <p>November 16-17: Shooting Sports</p>
-    <p>December 7-8: Primitive Camping Skills at Naylor's Mountain Retreat, Georgia</p>
-    <p>December 26-January 6: Bridges: Uganda in Uganda, Africa</p>
-    <p>December 27-31: Winter Camp at Bert Adams Scout Reservation</p>
-    <p>January 17-20: Sapelo Island, Georgia</p>
-    <p>February 8-9: Scout Weekend at St. James UMC</p>
-    <p>March 20-22: District Camporee at Bert Adams Scout Reservation</p>
-    <p>April 18-19: Mountain Biking &amp; Hiking at Cloudland Canyon State Park, Georgia</p>
-    <p>May 2-3: Hiking &amp; Backpacking</p>
-    <p>June 7-13: Summer Camp at Woodruff Scout Reservation</p>
-    <p>June 27-July 10: Philmont Scout Ranch in Cimarron, New Mexico</p>
-    <p>July 4-August 1: New River Trek at Summit Bechtel Reserve</p>
-    <p>July 23-August 2: Northern Tier in Atikokan, Ontario, Canada</p>
-  </div>
-</div>
-<div class="content-strip content-strip--no-bottom-padding">
-  <div class="flex-item">
-    <h2>Pine Straw Sales</h2>
-    <p>The Scout Troop’s principal fund raiser for summer camp and high adventure is selling and delivering Pine Straw to neighbors in the Buckhead, Brookhaven and Sandy Springs areas.
-      <span class="indent--new-line">Fall Pine Straw Sales Date – November 2, 2019</span>
-      <span class="indent--new-line">Spring Pine Straw Sales Date – March 14, 2020</span>
-    </p>
-  </div>
-</div>
-<div class="content-strip content-strip--no-bottom-padding">
-  <div class="flex-item">
-    <h2>Merit Badge Clinic</h2>
-    <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign up at <a href="http://meritbadge.info">meritbadge.info</a>
-      <span class="indent--new-line">Summer Merit Badge Clinic – August 18, 2019</span>
-      <span class="indent--new-line">Winter Merit Badge Clinic – February 8, 2020 (Part of Scout Weekend)</span>
-    </p>
-  </div>
-</div>
-<div class="content-strip content-strip--no-bottom-padding">
-  <div class="flex-item">
-    <h2>Planning Meetings</h2>
-    <p>Troop 370 has additional meeting times for members of the Patrol Leaders' Council and the Troop Committee.
-      <span class="indent--new-line">Patrol Leaders' Council – First Wednesday of each month at 6:30 PM</span>
-      <span class="indent--new-line">Troop Committee – Second Monday of each month at 6:30 PM</span>
-    </p>
-  </div>
-</div>
-<div class="content-strip">
-  <div class="flex-item">
-    <h2>Additional Dates</h2>
-    <p>
-      <span class="indent--new-line">SOLO Wilderness First Aid – October 19-20, 2019</span>
-      <span class="indent--new-line">Hornaday Conservation Weekend – November 8-10, 2019</span>
-      <span class="indent--new-line">Phoenix District Webelos WOW – November 9, 2019</span>
-      <span class="indent--new-line">CPR Saturday – December 24, 2019 &amp; May 2, 2020</span>
-      <span class="indent--new-line">Parent's Night &amp; Camp Kick Off – January 29, 2020</span>
-      <span class="indent--new-line">Scout Sunday – February 9, 2020</span>
-    </p>
-  </div>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0" url="/events.html">
+    <link rel="canonical" href="/events.html">
+    <title>This page has moved</title>
+  </head>
+  <body>
+    <p>This page has moved. Redirecting you to <a href="/events.html">/events.html</a></p>
+  </body>
+</html>
