fix years and links

--- a/events/merit-badge-clinics.html
+++ b/events/merit-badge-clinics.html
@@ -5,14 +5,14 @@ title: Merit Badge Clinics
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
     <h1>Troop 370 Merit Badge Clinics</h1>
-    <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign ups are available on <a href="Eventbrite">https://www.eventbrite.com/o/troop-370-10799742690</a></p>
+    <p>The Troop hosts two Merit Badge Clinics each year, open to Scouts within and outside of Troop 370. Sign ups are available on <a href="https://www.eventbrite.com/o/troop-370-10799742690">Eventbrite</a></p>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
   <div class="flex-item">
     <h2>2019-2020 Merit Badge Clinics</h2>
-    <p>Summer Merit Badge Clinic<br>August 18, 2018</p>
-    <p>Winter Merit Badge Clinic<br>February 8, 2019 (Part of Scout Weekend)</p>
+    <p>Summer Merit Badge Clinic<br>August 18, 2019</p>
+    <p>Winter Merit Badge Clinic<br>February 8, 2020 (Part of Scout Weekend)</p>
   </div>
 </div>
 <div class="content-strip content-strip--no-bottom-padding">
@@ -46,6 +46,6 @@ title: Merit Badge Clinics
 <div class="content-strip">
   <div class="flex-item">
     <h3>Winter Merit Badge Clinic</h3>
-    <p>Details will be available in early 2019.</p>
+    <p>Details will be available in early 2020.</p>
   </div>
 </div>
