add sign up card for sept 2019 rock climbing campout

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@ title: Home
     <div class="flex-item">
       <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true, "autoPlay": 4000, "freeScroll": true, "pageDots": false }'>
         {% include main-carousel-card.html
+            card-title="Rock Climbing Campout"
+            card-subtitle="September 21-22, 2019"
+            card-href="campout-sign-up.html"
+            button-text="Sign up"
+            background-image="/src/carousel-images/rock-climbing.png"
+        %}
+        {% include main-carousel-card.html
             card-title="Update Contact Info"
             card-subtitle="Update information in TroopMaster to prepare for upcoming communication changes"
             card-href="contact-info-directions.html"
