make reload button work on all tabs - not just home tab

--- a/store.html
+++ b/store.html
@@ -60,7 +60,7 @@ title: Troop 370 Store
 </div>
   <div style="text-align:center;color:#828282;position:absolute;top:50%;right:50%;">
     <p>Page not loading?<br>&nbsp;</p>
-    <button onclick="window.location.href=window.location.href" class="mdc-button mdc-button--outlined">Reload</button>
+    <button onclick="javascript:history.go(0)" class="mdc-button mdc-button--outlined">Reload</button>
   </div>
 <div class="content-strip" style="position:relative;">
   <div class="flex-item">
