--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ title: Home
             background-image="/src/carousel-images/rock-climbing.png"
         %}
         {% include main-carousel-card.html
+            card-title="Mountain Way Common Volunteer Day"
+            card-subtitle="Saturday, September 8, 2019"
+            card-href="mwc-fall-volunteer-day.html"
+            button-text="Learn more"
+            background-image="/src/carousel-images/mountain-way-common.webp"
+        %}
+        {% include main-carousel-card.html
             card-title="Update Contact Info"
             card-subtitle="Update information in TroopMaster to prepare for upcoming communication changes"
             card-href="contact-info-directions.html"
