move about pages to about category
pages will now be output in the sub-directory about (ex: 
/about/page.html)

--- a/_about/about.html
+++ b/_about/about.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: About
+redirect_from: about.html
 ---
 <div class="flex-container content-strip content-strip--primary content-strip--extra-padding">
   <div class="flex-item">
