--- a/_about/leaders.html
+++ b/_about/leaders.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Leaders
+redirect-from: leaders.html
 ---
 <head>
   <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
