--- a/_about/eagle-scout-honor-roll.html
+++ b/_about/eagle-scout-honor-roll.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Eagle Scout Honor Roll
+redirect_from: eagle-scout-honor-roll.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
