move information pages to information category
pages will now be output in the sub-directory about (ex: 
/information/page.html)

--- a/_information/advancement.html
+++ b/_information/advancement.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Advancement
+redirect_from: advancement.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
