--- a/_information/participation.html
+++ b/_information/participation.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Scout/Parent Participation
+redirect_from: participation.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
