--- a/_information/faqs.html
+++ b/_information/faqs.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: FAQs
+redirect_from: faqs.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
