--- a/_information/leadership-training.html
+++ b/_information/leadership-training.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Leadership Training
+redirect_from: leadership-training.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
