--- a/_about/about.html
+++ b/_about/about.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: About
+nav_order: 1
 redirect_from: about.html
 ---
 <div class="flex-container content-strip content-strip--primary content-strip--extra-padding">
