move events pages to events category

--- a/_events/additional-events.html
+++ b/_events/additional-events.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Additional Dates
+menu: hide
 ---
 <link rel="stylesheet" href="/css/page/campouts.css">
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
