--- a/_events/campouts.html
+++ b/_events/campouts.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Camping Schedule
+menu: hide
 ---
 <link rel="stylesheet" href="/css/page/campouts.css">
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
