--- a/_events/events.html
+++ b/_events/events.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Events
+permalink: /:path
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
