--- a/_events/merit-badge-clinics.html
+++ b/_events/merit-badge-clinics.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Merit Badge Clinics
+menu: hide
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
