--- a/_events/pinestraw.html
+++ b/_events/pinestraw.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Pine Straw
+menu: hide
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
