add missing pages to information category AND update page order

--- a/_information/contact-info-directions.html
+++ b/_information/contact-info-directions.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Update Contact Information
+nav_order: 100
+menu: hide
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
