--- a/_information/advancement.html
+++ b/_information/advancement.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Advancement
+nav_order: 2
 redirect_from: advancement.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
