--- a/_information/finding-mb.html
+++ b/_information/finding-mb.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Finding MB Class/Counselor
+nav_order: 6
+redirect_from: finding-mb.html
 ---
 <div class="content-strip">
   <div class="flex-item">
