--- a/_information/forms-documents.html
+++ b/_information/forms-documents.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Forms &amp; Documents
+nav_order: 1
 redirect_from: forms-documents.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
