--- a/_information/helpful-links.html
+++ b/_information/helpful-links.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Helpful Links
+nav_order: 7
 redirect_from: helpful-links.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
