--- a/_payments/recharter.html
+++ b/_payments/recharter.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Annual Recharter
+menu: hide
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
