move store page to store category

--- a/_store/store.html
+++ b/_store/store.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Troop 370 Store
+title: Store
 ---
 <div class="mdc-tab-bar" id="storeTabBar" role="tablist">
   <div class="mdc-tab-scroller">
