--- a/_contact/contact-webmaster.html
+++ b/_contact/contact-webmaster.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Contact Webmaster
+menu: hide
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
