--- a/_collections/_events/events.html
+++ b/_collections/_events/events.html
@@ -2,6 +2,7 @@
 layout: default
 title: Events
 permalink: /:path
+redirect_from: campout-schedule-local-events.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
