--- a/_collections/_events/hub.html
+++ b/_collections/_events/hub.html
@@ -2,7 +2,9 @@
 layout: default
 title: Events
 permalink: /:path
-redirect_from: campout-schedule-local-events.html
+redirect_from:
+ - campout-schedule-local-events.html
+ - events.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
