--- a/_collections/_events/camps-adventure.html
+++ b/_collections/_events/camps-adventure.html
@@ -2,6 +2,7 @@
 layout: default
 title: Camps/High Adventure
 menu: hide
+redirect_from: camps-adventure.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
