move sign up pages to members category

--- a/_collections/_members/banquet-sign-up.html
+++ b/_collections/_members/banquet-sign-up.html
@@ -1,5 +1,7 @@
 ---
 layout: default
 title: Annual Family Banquet 2019
+menu: hide
+redirect_from: banquet-sign-up.html
 ---
 {% include iframe-signup.html src="https://docs.google.com/forms/d/e/1FAIpQLSeqe8cw-qF_f13HovDVVTIIQw7zl9ZDUxuCyNw0k0TblbMxWQ/viewform?embedded=true"%}
