--- a/_collections/_events/merit-badge-clinics.html
+++ b/_collections/_events/merit-badge-clinics.html
@@ -2,6 +2,7 @@
 layout: default
 title: Merit Badge Clinics
 menu: hide
+redirect_from: merit-badge-clinic.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
