move mwc-fall-volunteer-day.html to events category (redirect included)

--- a/_collections/_events/mwc-fall-volunteer-day.html
+++ b/_collections/_events/mwc-fall-volunteer-day.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Mountain Way Common Fall Volunteer Day
+menu: hide
+redirect_from: mwc-fall-volunteer-day.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
