--- a/_collections/_information/contact-info-directions.html
+++ b/_collections/_information/contact-info-directions.html
@@ -3,6 +3,7 @@ layout: default
 title: Update Contact Information
 nav_order: 100
 menu: hide
+redirect_from: contact-info-directions.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
