move cookies.html to information category

--- a/_collections/_information/cookies.html
+++ b/_collections/_information/cookies.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Cookie Usuage Information
+menu: hide
+redirect_from: cookies.html
 ---
 <div class="content-strip content-strip--primary content-strip--extra-padding content-strip--center">
   <div class="flex-item">
