fix broken links

--- a/_collections/_events/hub.html
+++ b/_collections/_events/hub.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Events
-permalink: /:path
+permalink: /:path.html
 redirect_from:
  - campout-schedule-local-events.html
  - events.html
