--- a/_collections/_information/contact-info-directions.html
+++ b/_collections/_information/contact-info-directions.html
@@ -38,8 +38,8 @@ redirect_from: contact-info-directions.html
         <li> Click close. Now, you’re all set! </li>
       </ol>
     </p>
-    <p> If you have any questions, feel free to contact the webmaster for assistance <a href="contact-webmaster.html">here</a>.</p>
-    <a href="src/documents/Update your TroopMaster Contact Information.docx" class="mdc-button standard-light-button mdc-button--outlined mdc-ripple-upgraded">
+    <p> If you have any questions, feel free to contact the webmaster for assistance <a href="/contact-webmaster.html">here</a>.</p>
+    <a href="/src/documents/Update your TroopMaster Contact Information.docx" class="mdc-button standard-light-button mdc-button--outlined mdc-ripple-upgraded">
       <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:24px;">
       <path d="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"></path>
       </svg>
