--- a/_collections/_payments/payments.html
+++ b/_collections/_payments/payments.html
@@ -45,7 +45,7 @@ title: Payments
   <div class="flex-item">
     <h2>Cash, Check, or Money Order</h2>
     <p>Hand-deliver these payment types to the Trip Captain or the Scoutmaster, preferably at the weekly Wednesday meetings. The current Trip Captain is listed on the sign-up form for the monthly campout.</p>
-    <a href="./index.html#time-banner" class="mdc-button mdc-button--outlined">Meeting details</a>
-    <a href="./campout-sign-up.html" class="mdc-button mdc-button--outlined">Campout sign-up</a>
+    <a href="/events/meetings.html" class="mdc-button mdc-button--outlined">Meeting details</a>
+    <a href="/members/campout-sign-up.html" class="mdc-button mdc-button--outlined">Campout sign-up</a>
   </div>
 </div>
