add new pine straw order form

--- a/_collections/_store/pinestraw.html
+++ b/_collections/_store/pinestraw.html
@@ -44,17 +44,11 @@ redirect_from:
   <div class="flex-item">
     <h2>Order</h2>
     <p>Order pine straw through the online store (preferred) or by using the order form below:</p>
-    <a href="https://store.troop370atlanta.org" class="mdc-button mdc-button--outlined">
-      <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:24px;">
-      <path d="M17,18C15.89,18 15,18.89 15,20A2,2 0 0,0 17,22A2,2 0 0,0 19,20C19,18.89 18.1,18 17,18M1,2V4h2L6.6,11.59L5.24,14.04C5.09,14.32 5,14.65 5,15A2,2 0 0,0 7,17H19V15H7.42A0.25,0.25 0 0,1 7.17,14.75C7.17,14.7 7.18,14.66 7.2,14.63L8.1,13H15.55C16.3,13 16.96,12.58 17.3,11.97L20.88,5.5C20.95,5.34 21,5.17 21,5A1,1 0 0,0 20,4H5.21L4.27,2M7,18C5.89,18 5,18.89 5,20A2,2 0 0,0 7,22A2,2 0 0,0 9,20C9,18.89 8.1,18 7,18Z" />
-      </svg>
-      Online store
-    </a>
-    <a href="https://docs.wixstatic.com/ugd/697593_f2d3edf1004145f3801677f2e817adba.pdf" class="mdc-button mdc-button--outlined">
+    <a href="/src/documents/Troop370PineStrawFlyerFall2019.pdf" class="mdc-button mdc-button--outlined">
       <svg class="mdc-button__icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" style="height:24px;">
       <path d="M5,20H19V18H5M19,9H15V3H9V9H5L12,16L19,9Z"></path>
       </svg>
-      Order Form - 16 March 2019
+      Order Form - Fall 2019
     </a>
   </div>
 </div>
