make store pages useable in light theme (fix dark text on header images)

--- a/_collections/_store/pinestraw.html
+++ b/_collections/_store/pinestraw.html
@@ -8,7 +8,15 @@ redirect_from:
  - pay/pinestraw.html
  - pay/store.html
 ---
-<div class="content-strip content-strip--center" style="background-image: url(/src/carousel-images/pineneedles_l.jpg);background-color: #3a3d54;background-blend-mode: multiply;height: calc(100vh - 71px);align-items: center;margin-top: -56px;">
+<style media="screen">
+  .topnav:not(.scroll) #main-nav > li > a {
+    color: white;
+  }
+  .topnav:not(.scroll) .grid-item-title #topnav-title {
+    color: #aac0eb;
+  }
+</style>
+<div class="content-strip content-strip--primary content-strip--center" style="background-image: url(/src/carousel-images/pineneedles_l.jpg);background-color: #3a3d54;background-blend-mode: multiply;height: calc(100vh - 71px);align-items: center;margin-top: -56px;">
   <div class="flex-item">
     <h1>BSA Troop 370 Pine Straw</h1>
     <p>Support scouting by purchasing premium long leaf pine straw.</p>
