--- a/_collections/_store/wreaths.html
+++ b/_collections/_store/wreaths.html
@@ -3,7 +3,15 @@ layout: default
 title: Holiday Wreaths
 nav_order: 2
 ---
-<div class="content-strip content-strip--center" style="background-image: url(/src/carousel-images/spruceneedles.jpg);background-color: #3a3d54;background-blend-mode: multiply;height: calc(100vh - 71px);align-items: center;margin-top: -56px;">
+<style media="screen">
+  .topnav:not(.scroll) #main-nav > li > a {
+    color: white;
+  }
+  .topnav:not(.scroll) .grid-item-title #topnav-title {
+    color: #aac0eb;
+  }
+</style>
+<div class="content-strip content-strip--primary content-strip--center" style="background-image: url(/src/carousel-images/spruceneedles.jpg);background-color: #3a3d54;background-blend-mode: multiply;height: calc(100vh - 71px);align-items: center;margin-top: -56px;">
   <div class="flex-item">
     <h1>BSA Troop 370 Holiday Wreaths</h1>
     <p>Support scouting by purchasing holiday wreaths from Troop 370.</p>
